@@ -6,6 +6,7 @@ XXXX-XX-XX XX:XX:XX Version 0.0.6
 * Added Update cache with browsing content
 * Added landing date/time and auto-drop information to table of incoming fleets
 * Added Ground Armies and Carried Armies to Fleet Calculator
+* Added Show average Space AvgP and Ground AvgP for Battle Reports
 
 2013-11-26 21:09:43 Version 0.0.5
 * Added changelog
